Tue, Jan 13, 2009
---------------------------------------------------------------------
- Added rendering of local sidebar template if it's available.
- Added sidebar for Leads and implemented initial version of leads filtering by status.

Mon, Jan 12, 2009
---------------------------------------------------------------------
- Replaced account template stubs with actual contact and opportunity numbers.
- Added web-to-lead submission hook to Leads controller (thanks bitdigital)!

Sun, Jan 11, 2009
---------------------------------------------------------------------
- Made campaign and lead models track lead-to-opportunity conversion ratio.

Sat, Jan 10, 2009
---------------------------------------------------------------------
- Implemented backend for [Opportunity/New].
- Refactored models validation code.
- Added fixtures for join tables.

Fri, Jan 9, 2009
---------------------------------------------------------------------
- Converted [Opportunity/Show] to HAML and created [Opportunity/New] form (with backend stub).

Thu, Jan 8, 2009
---------------------------------------------------------------------
- Simplified submission for forms with account create/select.
- Added app-specific rake tasks -- app:setup, app:demo, and app:reset.
- Updated [uses_mysql_uuid] plugin to explicitly check for MySQL v5 or later.
- Updated database migrations and rake tasks to make them database-type neutral.
- Fat Free CRM now works with MySQL v4 and SQLite!

Wed, Jan 7, 2009
---------------------------------------------------------------------
- Implemented backend for [Contact/New].
- Made model functions more general for better code reuse.

Tue, Jan 6, 2009
---------------------------------------------------------------------
- Figured out how to make [has_one :through] work and save the join record.
- Restructured [uses_mysql_uuid] to use proper module nesting and extend base with SingletonMethods.
- Fixes in opportunity/index and contact/delete.