@@ -11,7 +11,8 @@ module LeadsHelper
 
   #----------------------------------------------------------------------------
   def status_checbox(status)
-    check_box_tag("status[]", status, session["lead_filter_#{status.to_s}".to_sym], :onclick => remote_function(:url => { :action => :filter }, :with => %Q/"status=" + $$("input[name='status[]']").findAll(function (el) { return el.checked }).pluck("value")/))
+    checked = (session[:filter_by_lead_status] ? session[:filter_by_lead_status].split(",").include?(status.to_s) : true)
+    check_box_tag("status[]", status, checked, :onclick => remote_function(:url => { :action => :filter }, :with => %Q/"status=" + $$("input[name='status[]']").findAll(function (el) { return el.checked }).pluck("value")/))
   end
 
 end
