@@ -28,6 +28,7 @@ class Account < ActiveRecord::Base
   has_many :account_opportunities, :dependent => :destroy
   has_many :opportunities, :through => :account_opportunities, :uniq => true
   has_many :permissions, :as => :asset, :include => :user
+  named_scope :my, lambda { |user| { :joins => :permissions, :conditions => ["accounts.user_id=? OR accounts.assigned_to=? OR permissions.user_id=?", user, user, user], :order => "id DESC" } }
   uses_mysql_uuid
   acts_as_paranoid
 
