@@ -29,6 +29,7 @@ class Campaign < ActiveRecord::Base
   has_many :leads
   has_many :opportunities
   has_many :permissions, :as => :asset, :include => :user
+  named_scope :my, lambda { |user| { :joins => :permissions, :conditions => ["campaigns.user_id=? OR campaigns.assigned_to=? OR permissions.user_id=?", user, user, user], :order => "id DESC" } }
   uses_mysql_uuid
   acts_as_paranoid
 
