@@ -31,6 +31,7 @@ class Opportunity < ActiveRecord::Base
   has_many :contact_opportunities, :dependent => :destroy
   has_many :contacts, :through => :contact_opportunities, :uniq => true
   has_many :permissions, :as => :asset, :include => :user
+  named_scope :my, lambda { |user| { :joins => :permissions, :conditions => ["opportunities.user_id=? OR opportunities.assigned_to=? OR permissions.user_id=?", user, user, user], :order => "id DESC" } }
   uses_mysql_uuid
   acts_as_paranoid
 
