@@ -19,10 +19,11 @@ class CreateOpportunities < ActiveRecord::Migration
     end
 
     add_index :opportunities, [ :user_id, :deleted_at ], :unique => true
-    add_index :opportunities, :uuid
+    add_index :opportunities, :assigned_to
 
     if adapter_name.downcase == "mysql"
-      if select_value("select version()").to_i >= 5
+      if select_value("SELECT VERSION()").to_i >= 5
+        add_index :opportunities, :uuid
         execute("CREATE TRIGGER opportunities_uuid BEFORE INSERT ON opportunities FOR EACH ROW SET NEW.uuid = UUID()")
       end
     end
